--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.35.0",
+    "@types/express": "^4.17.13",
+    "express": "^4.18.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.23"
