--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@ant-design/pro-layout": "^6.35.0",
+    "@ant-design/pro-table": "^2.74.1",
     "@types/express": "^4.17.13",
     "express": "^4.18.1",
     "react": "17.x",
@@ -30,7 +31,6 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.23",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
