--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev ",
+    "start": "umi dev",
     "build": "umi build",
     "postinstall": "umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
@@ -20,10 +20,8 @@
     ]
   },
   "dependencies": {
-    "@ant-design/pro-layout": "^6.35.0",
+    "@ant-design/pro-layout": "^6.5.0",
     "@ant-design/pro-table": "^2.74.1",
-    "@types/express": "^4.17.13",
-    "express": "^4.18.1",
     "react": "17.x",
     "react-dom": "17.x",
     "umi": "^3.5.23"
@@ -31,6 +29,7 @@
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@umijs/preset-react": "1.x",
     "@umijs/test": "^3.5.23",
     "lint-staged": "^10.0.7",
     "prettier": "^2.2.0",
