--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "start": "umi dev",
-    "build": "umi build",
-    "postinstall": "umi generate tmp",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider umi dev",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider umi build",
+    "postinstall": "NODE_OPTIONS=--openssl-legacy-provider umi generate tmp",
     "prettier": "prettier --write '**/*.{js,jsx,tsx,ts,less,md,json}'",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage"
